<resources>
    <string name="app_name">Plan My Course</string>

    <string name="hello_world">Ashfaq</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_quiz">QuizActivity</string>

    <string name="title_activity_show_routine">Routine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="currentCGPA">Current CGPA</string>
    <string name="totalCredit">Total Credit Hours</string>
    <string name="instruction">Please fill in the info below :</string>
    <string-array name="grade_arrays">
        <item>Grade</item>
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
    </string-array>
    <string-array name="chour_arrays">
        <item>Credit Hour</item>
        <item>.75</item>
        <item>1.5</item>
        <item>3</item>
    </string-array>
    <string name="totalcredit">Total Credit Hours</string>
    <string name="info1">"#Total Credit Hours = Accumulated Credit Hours that you have taken "</string>
    <string name="info2">#Current CGPA = Latest CGPA from the previous semesters</string>



</resources>
