<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:padding="10sp" >

    <!-- Instruction is here  -->
    <LinearLayout
        android:id="@+id/bSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- info -->
        <LinearLayout
            android:id="@+id/introLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textinfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/introLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textinfo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textStyle="bold" />

        </LinearLayout>


        <!-- Current CGPA is here  -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentCGPA" />

            <EditText
                android:id="@+id/currentCGPA"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" >

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCredit" />

            <EditText
                android:id="@+id/currentCredit"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>
        </LinearLayout>


        <!-- ################################# Grade is here  ############################### -->
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays" />

            <Spinner
                android:id="@+id/chour1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7" />

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8" />

            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9" />

            <Spinner
                android:id="@+id/spinner9"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" />

            <Spinner
                android:id="@+id/spinner10"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:entries="@array/grade_arrays"
                />

            <Spinner
                android:id="@+id/chour10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/chour_arrays"
                />

        </LinearLayout>


        <!-- ############################ Grade stops here  ############################### -->

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00a1f1"
                android:text="Calculate"
                android:textColor="#FFFFFF"
                android:textStyle="bold" >

            </Button>>

        </LinearLayout>

    </LinearLayout>

</ScrollView>